iptables
# Generated by iptables-save v1.4.21 on Mon Apr 15 02:51:30 2019
*nat
:PREROUTING ACCEPT [8442:794205]
:INPUT ACCEPT [52:3116]
:OUTPUT ACCEPT [3378:235720]
:POSTROUTING ACCEPT [3378:235720]
-A POSTROUTING -s 192.168.10.0/24 -o ##"IFNAME"## -j MASQUERADE
COMMIT
# Completed on Mon Apr 15 02:51:30 2019
# Generated by iptables-save v1.4.21 on Mon Apr 15 02:51:30 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [21488:43859106]
:OUTPUT ACCEPT [36101:78639503]

-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i ##"IFNAME"## -p tcp -m tcp --dport 3389 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -i ##"IFNAME"## -p udp -m udp --dport 3389 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -i ##"IFNAME"## -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -s 192.168.10.0/24 -j ACCEPT
-A OUTPUT -o ##"IFNAME"## -m conntrack --ctstate ESTABLISHED -j ACCEPT
COMMIT
# Completed on Mon Apr 15 02:51:30 2019
